// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contracts page DataTable newRowWrapper should be EditableContractRow 1`] = `
<TableRow>
  <TableCell
    columnName="Trans(i18nKey=name)"
  >
    <TextInput
      onChange={[Function]}
      value=""
    />
    <InputGroupText
      key="0"
    >
      <Tooltip
        content={
          <List
            style={
              Object {
                "color": "white",
              }
            }
          >
            <ListItem>
              Trans(i18nKey=contractEmptyNameError)
            </ListItem>
          </List>
        }
      >
        <WarningTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </Tooltip>
    </InputGroupText>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerDay)"
  >
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value=""
    />
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerWeek)"
  >
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value=""
    />
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerMonth)"
  >
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value=""
    />
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerYear)"
  >
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value=""
    />
  </TableCell>
  <RowEditButtons
    isValid={false}
    onClose={[Function]}
    onSave={[Function]}
  />
</TableRow>
`;

exports[`Contracts page DataTable rowWrapper should be ContractRow 1`] = `
<TableRow>
  <TableCell
    columnName="Trans(i18nKey=name)"
  >
    <Text>
      Contract 1
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerDay)"
  >
    <Text>
      1
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerWeek)"
  >
    <Text>
      2
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerMonth)"
  >
    <Text />
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerYear)"
  >
    <Text />
  </TableCell>
  <RowViewButtons
    onDelete={[Function]}
    onEdit={[Function]}
  />
</TableRow>
`;

exports[`Contracts page clicking on the edit button in the viewer should show the editor 1`] = `
<EditableContractRow
  contract={
    Object {
      "id": 0,
      "maximumMinutesPerDay": 1,
      "maximumMinutesPerMonth": null,
      "maximumMinutesPerWeek": 2,
      "maximumMinutesPerYear": null,
      "name": "Contract 1",
      "tenantId": 0,
      "version": 0,
    }
  }
  isNew={false}
  onClose={[Function]}
/>
`;

exports[`Contracts page clicking on the edit button in the viewer should show the editor 2`] = `
<TableRow>
  <TableCell
    columnName="Trans(i18nKey=name)"
  >
    <Text>
      Contract 1
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerDay)"
  >
    <Text>
      1
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerWeek)"
  >
    <Text>
      2
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerMonth)"
  >
    <Text />
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerYear)"
  >
    <Text />
  </TableCell>
  <RowViewButtons
    onDelete={[Function]}
    onEdit={[Function]}
  />
</TableRow>
`;

exports[`Contracts page clicking on the edit button should show editor 1`] = `
<EditableContractRow
  contract={
    Object {
      "id": 0,
      "maximumMinutesPerDay": 1,
      "maximumMinutesPerMonth": null,
      "maximumMinutesPerWeek": 2,
      "maximumMinutesPerYear": null,
      "name": "Contract 1",
      "tenantId": 0,
      "version": 0,
    }
  }
  isNew={false}
  onClose={[Function]}
/>
`;

exports[`Contracts page clicking on the edit button should show editor 2`] = `
<TableRow>
  <TableCell
    columnName="Trans(i18nKey=name)"
  >
    <Text>
      Contract 1
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerDay)"
  >
    <Text>
      1
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerWeek)"
  >
    <Text>
      2
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerMonth)"
  >
    <Text />
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerYear)"
  >
    <Text />
  </TableCell>
  <RowViewButtons
    onDelete={[Function]}
    onEdit={[Function]}
  />
</TableRow>
`;

exports[`Contracts page should render correctly with a few skills 1`] = `
<DataTable
  columns={
    Array [
      Object {
        "name": "Trans(i18nKey=name)",
        "sorter": [Function],
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerDay)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerWeek)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerMonth)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerYear)",
      },
    ]
  }
  filterText=""
  filteredRows={
    Immutable.List [
      Object {
        "id": 0,
        "maximumMinutesPerDay": 1,
        "maximumMinutesPerMonth": null,
        "maximumMinutesPerWeek": 2,
        "maximumMinutesPerYear": null,
        "name": "Contract 1",
        "tenantId": 0,
        "version": 0,
      },
      Object {
        "id": 1,
        "maximumMinutesPerDay": null,
        "maximumMinutesPerMonth": 3,
        "maximumMinutesPerWeek": null,
        "maximumMinutesPerYear": 4,
        "name": "Contract 2",
        "tenantId": 0,
        "version": 0,
      },
    ]
  }
  history={
    Object {
      "action": "PUSH",
      "block": [MockFunction],
      "createHref": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "length": 1,
      "listen": [MockFunction],
      "location": Object {
        "hash": "",
        "pathname": "/0/skill",
        "search": "",
        "state": undefined,
      },
      "push": [MockFunction],
      "replace": [MockFunction],
    }
  }
  isReversed={false}
  itemsPerPage={10}
  location={
    Object {
      "hash": "",
      "pathname": "/0/skill",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/0/skill",
      "url": "localhost:8080/0/skill",
    }
  }
  newRowWrapper={[Function]}
  numOfFilteredRows={2}
  onSorterChange={[Function]}
  page={1}
  rowWrapper={[Function]}
  rowsInPage={
    Immutable.List [
      Object {
        "id": 0,
        "maximumMinutesPerDay": 1,
        "maximumMinutesPerMonth": null,
        "maximumMinutesPerWeek": 2,
        "maximumMinutesPerYear": null,
        "name": "Contract 1",
        "tenantId": 0,
        "version": 0,
      },
      Object {
        "id": 1,
        "maximumMinutesPerDay": null,
        "maximumMinutesPerMonth": 3,
        "maximumMinutesPerWeek": null,
        "maximumMinutesPerYear": 4,
        "name": "Contract 2",
        "tenantId": 0,
        "version": 0,
      },
    ]
  }
  sortByIndex={0}
  title="Trans(i18nKey=contracts)"
/>
`;

exports[`Contracts page should render correctly with no skills 1`] = `
<DataTable
  columns={
    Array [
      Object {
        "name": "Trans(i18nKey=name)",
        "sorter": [Function],
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerDay)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerWeek)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerMonth)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerYear)",
      },
    ]
  }
  filterText=""
  filteredRows={Immutable.List []}
  history={
    Object {
      "action": "PUSH",
      "block": [MockFunction],
      "createHref": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "length": 1,
      "listen": [MockFunction],
      "location": Object {
        "hash": "",
        "pathname": "/0/skill",
        "search": "",
        "state": undefined,
      },
      "push": [MockFunction],
      "replace": [MockFunction],
    }
  }
  isReversed={false}
  itemsPerPage={10}
  location={
    Object {
      "hash": "",
      "pathname": "/0/skill",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/0/skill",
      "url": "localhost:8080/0/skill",
    }
  }
  newRowWrapper={[Function]}
  numOfFilteredRows={0}
  onSorterChange={[Function]}
  page={1}
  rowWrapper={[Function]}
  rowsInPage={Immutable.List []}
  sortByIndex={0}
  title="Trans(i18nKey=contracts)"
/>
`;

exports[`Contracts page should render the editor correctly 1`] = `
<TableRow>
  <TableCell
    columnName="Trans(i18nKey=name)"
  >
    <TextInput
      onChange={[Function]}
      value="Contract 1"
    />
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerDay)"
  >
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value={1}
    />
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerWeek)"
  >
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value={2}
    />
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerMonth)"
  >
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value=""
    />
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerYear)"
  >
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value=""
    />
  </TableCell>
  <RowEditButtons
    isValid={true}
    onClose={[Function]}
    onSave={[Function]}
  />
</TableRow>
`;

exports[`Contracts page should render the viewer correctly 1`] = `
<TableRow>
  <TableCell
    columnName="Trans(i18nKey=name)"
  >
    <Text>
      Contract 1
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerDay)"
  >
    <Text>
      1
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerWeek)"
  >
    <Text>
      2
    </Text>
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerMonth)"
  >
    <Text />
  </TableCell>
  <TableCell
    columnName="Trans(i18nKey=maxMinutesPerYear)"
  >
    <Text />
  </TableCell>
  <RowViewButtons
    onDelete={[Function]}
    onEdit={[Function]}
  />
</TableRow>
`;
